[project]
name = "ringdown"
dynamic = ["version"]
description = "Bayesian analysis of black hole ringdowns in gravitational-wave data."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Maximiliano Isi", email = "max.isi@ligo.org" },
    { name = "Will M. Farr", email = "will.farr@stonybrook.edu" }
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy"
]
requires-python = ">=3.11, <3.13"
dependencies = [
    "numpy==2.2.3",
    "lalsuite==7.24",
    "h5py~=3.11",
    "arviz~=0.19",
    "pandas~=2.2",
    "qnm==0.4.3",
    "seaborn~=0.13",
    "numpyro~=0.15",
    "jax~=0.4",
    "parse>=1.20"
]

[project.scripts]
ringdown_fit = "ringdown.cli.ringdown_fit:main"
ringdown_pipe = "ringdown.cli.ringdown_pipe:main"
ringdown_scan = "ringdown.cli.ringdown_scan:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
