[metadata]
name = ringdown
version = 0.1
description = Bayesian analysis of black hole ringdowns in gravitational-wave data.
long_description = file: README.md
long_description_content_type = text/markdown
author = Maximiliano Isi, Will M. Farr
author_email = max.isi@ligo.org, will.farr@stonybrook.edu
url = https://github.com/maxisi/ringdown
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy

[options]
python_requires = >=3.10
install_requires =
    arviz>=0.17,<0.20
    h5py>=3
    lalsuite>=7.21,<8.0
    pandas>=2.0
    qnm==0.4.3
    seaborn==0.13
    numpyro>=0.14,<1.5
    jax>=0.4.12
    parse>=1.20
packages = find:
scripts =
    bin/ringdown_fit
    bin/ringdown_pipe
